@@ -194,6 +194,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12119. hadoop fs -expunge does not work for federated namespace
     (J.Andreina via vinayakumarb)
 
+    HADOOP-12296. when setnetgrent returns 0 in linux, exception should be
+    thrown (Chang Li via jlowe)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
